# transcriptor-sesiones

./: .env.example  .gitignore  CLAUDE.md  INICIAR.bat  INSTALAR.bat  LICENSE  README.md  alembic.ini  instalar.ps1  pyproject.toml  run.bat  run.py
.claude/agents/: grimorio.architect.md  grimorio.code-reviewer.md  grimorio.feature-orchestrator.md  grimorio.js-developer.md  grimorio.manual-verifier.md  grimorio.po.md  grimorio.qa.md  grimorio.security.md  grimorio.ui-developer.md  grimorio.ux.md
.claude/skills/agent-writing/: SKILL.md  project.md
.claude/skills/architect-memory/: SKILL.md  project.md
.claude/skills/arquitectura/: SKILL.md  project.md
.claude/skills/code-reviewer-memory/: SKILL.md  project.md
.claude/skills/developer-memory/: SKILL.md  project.md
.claude/skills/development-patterns/: SKILL.md
.claude/skills/feature-workflow/: SKILL.md
.claude/skills/frontend-development/: SKILL.md
.claude/skills/javascript/: SKILL.md
.claude/skills/orchestrator-memory/: SKILL.md  project.md
.claude/skills/pipeline-modes/: SKILL.md
.claude/skills/po-memory/: SKILL.md  project.md
.claude/skills/prompt-writing-quality/: SKILL.md
.claude/skills/proposito/: SKILL.md
.claude/skills/qa-memory/: SKILL.md  project.md
.claude/skills/ux-memory/: SKILL.md  (+1 more)
app/: config.py  main.py
app/application/: ports.py
app/domain/: entities.py
docs/: po-brief.md  ux-review-react.md  ux-review.md
migrations/: env.py
web/: .gitignore  README.md  package-lock.json  package.json  vite.config.ts
web/.storybook/: preview.tsx
web/src/: App.tsx  main.tsx
(+82 files in other folders)
