[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "transcriptor-sesiones"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "jinja2>=3.1",
  "python-multipart>=0.0.9",
  "pydantic-settings>=2.3",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "faster-whisper>=1.0",
  "openai>=1.35",
  "pydub>=0.25",
  "noisereduce>=3.0",
  "soundfile>=0.12",
  "numpy>=1.26",
  "python-docx>=1.1",
  "aiofiles>=23.2",
  "audioop-lts>=0.2.1; python_version>='3.13'",
  "nvidia-cublas-cu12>=12; sys_platform=='win32'",
  "nvidia-cudnn-cu12>=9; sys_platform=='win32'",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "httpx>=0.27", "ruff>=0.5"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
